# MyVoxelizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Viewer.py  main.cpp
doc/: method.md
model/: armadillo.stl  b-2.stl  biela.stl  bunny.stl  cat.stl  dragon.stl  teapot.stl
python/: stl2vol.cpp  stlToTxt.py
python/Voxel2Stl/: voxel2stl.py  voxel2stlwithSmooth.py
python/stl2VTK/: txt2Vtk.py
stl2voxel/: CMakeLists.txt  Kernel.cu  VoxelGrid.cpp  VoxelGrid.cu  Voxelizer.cpp  Voxelizer.cu  Voxelizer.cuh  Voxelizer.h  cumath.cuh
tinyxml/: CMakeLists.txt
